--- a/styles/index.css
+++ b/styles/index.css
@@ -9,23 +9,21 @@ html {
 }
 
 body {
+    padding: 0px;
+    margin: 0px;
     background-color: #efecec;
     font-family: 'Dosis', sans-serif;
     scroll-behavior: smooth;
     overflow-y: scroll;
-    margin: 0;
 }
 /* TITULO */
 
 .banner{
-    padding: 0px;
-    margin: 0px;
-    border: 0px;
+    position: fixed;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    align-content: center;
-    width: 100vw;
+    justify-content: space-between;
+    width: 100%;
     height: 100px;
     background-color: rgb(241, 118, 16);
     box-shadow: 5px 1px 5px black;
@@ -38,11 +36,15 @@ body {
     font-size: 60px;
 }
 
+.carrito_img{
+    width: 40px;
+}
+
 /* SECCION PRODUCTOS */
 
 .cajaPresupuesto{
-    margin: 10px;
-    width: 98.5vw;
+    display: absolute;
+    padding: 100px;
     background-color: rgb(238, 238, 238);
     box-shadow: 5px 1px 5px rgb(146, 146, 146);
 }
@@ -144,17 +146,13 @@ body {
 	top:2px;
 }
 
+
 .nav_bar_carrito {
     display: flex;
-    position: fixed;
-    left: 0px;
-    bottom: 0px;
-    width: 50vw;
-    height: 100px;
+    position: relative;
 }
 
 .card_carrito_productos {
-    display: flex;
     box-shadow: 0px 5px 10px 0px rgba(69, 67, 96, 0.1);
     background-color: white;
     border-radius: 16px;
@@ -162,17 +160,14 @@ body {
 }
 
 .titulo_carrito_productos {
-    position: static;
-    display: inline-block;
     margin-left: 10px;
     
 }
 
 .lista_productos_carrito{
-    display: inline;
+    display: flex;
     margin-left: 10px;
     padding-top: 5px;
-
 }
 
 .card_carrito_total {
