--- a/styles/index.css
+++ b/styles/index.css
@@ -194,3 +194,11 @@ body {
     width: 40px;
     height: 40px;
 }
+
+.creador{
+    display: inline-block;
+}
+
+.nombreApellido{
+    display: inline-block;
+}
