--- a/styles/index.css
+++ b/styles/index.css
@@ -117,17 +117,17 @@ body {
 .card_title{
     text-align: center;
     font-size: 20px;
-    margin-top: 15px;  
+    margin-top: 3%;  
 }
 
 .card_portada {
     width: 70%;
     height: auto;
-    display: inline-flex;
-    justify-content: center;
+    margin-left: 15%;
 }
 
 .card_price {
+
     font-size: 20px;
     text-align: center;
     font-family: 'Dosis', sans-serif;
@@ -135,18 +135,18 @@ body {
 }
 
 .card_btn {
-    display: inline-flex;
-    justify-content: center;
     font-family: 'Dosis', sans-serif;
 	box-shadow: 0px 10px 6px -7px #000000;
 	background-color:rgb(17, 4, 47);;
 	border-radius:9px;
     border-color: rgb(255, 197, 71);
-	cursor:pointer;
 	color:#ffffff;
 	font-size:15px;
 	font-weight:bold;
-	padding: 8px 10px;  
+	padding: 8px 10px;
+    width: 53%;
+    margin: 0px 22%;
+    margin-top: 1%;  
 }
 .card_btn:hover {
 	background-color:rgb(42, 22, 90);;
