--- a/styles/carrito.css
+++ b/styles/carrito.css
@@ -1,8 +1,6 @@
 * {
     padding: 0px;
     margin: 0px;
-    box-sizing: border-box;
-    text-decoration: none;
 }
 
 html {
@@ -19,12 +17,12 @@ body {
 /* BANNER */
 
 .banner{
+    z-index: 1;
     position: fixed;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 100px;
     background-color: rgb(241, 118, 16);
     box-shadow: 5px 1px 5px black;
 }
@@ -49,4 +47,128 @@ body {
 
 .nav_texto_link{
     color: black;
+}
+
+/* CAJA CARRITO */
+.contenedorTotal{
+    z-index: 0;
+    position: relative;
+    width: 100%;
+    top: 100px;
+}
+
+.cajaCarrito {
+    position: relative;
+}
+
+/* CARRITO */
+
+.nav_bar_carrito {
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+}
+
+.card_carrito_productos {
+    box-shadow: 0px 5px 10px 0px rgba(69, 67, 96, 0.1);
+    background-color: white;
+    border-radius: 16px;
+}
+
+.titulo_carrito_productos {
+    margin-left: 10px;
+}
+
+.lista_productos_carrito{
+    display: flex;
+    margin-left: 10px;
+    padding-top: 5px;
+}
+
+.card_carrito_total {
+    display: block;
+    box-shadow: 0px 5px 10px 0px rgba(117, 114, 155, 0.1);
+    background-color: white;
+    border-radius: 16px;
+    width: 150px;
+    height: 30px;
+}
+
+.titulo_carrito_total {
+    position: static;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.total_carrito{
+    display: inline-block;
+}
+
+.tacho{
+    width: 40px;
+    height: 40px;
+}
+
+/* CARDS CARRITO*/
+
+/* CARDS PRODUCTOS*/
+
+.card_productos{
+    display: inline-block;
+    width: 100%;
+}
+
+.cardCarrito {
+    display: inline-flex;
+    flex-direction: column;
+    box-shadow: 5px 5px 15px rgba(3, 35, 77, 60%);
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    margin: 12px;
+    width: 250px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.card_title{
+    text-align: center;
+    font-size: 20px;
+    margin-top: 3%;  
+}
+
+.card_portada {
+    width: 70%;
+    height: auto;
+    margin-left: 15%;
+}
+
+.card_price {
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Dosis', sans-serif;
+    font-weight: bold;
+}
+
+.card_cantidad {
+    font-family: 'Dosis', sans-serif;
+	box-shadow: 0px 10px 6px -7px #000000;
+	background-color:rgb(17, 4, 47);;
+	border-radius:30px;
+    border-color: rgb(255, 197, 71);
+	color:#ffffff;
+	font-size:15px;
+	font-weight:bold;
+	padding: 8px 10px;
+    width: 15%;
+    margin: 0px 40%;
+    margin-top: 1%;  
+}
+.card_btn:hover {
+	background-color:rgb(42, 22, 90);;
+    border-color: rgb(241, 118, 16);
+}
+.card_btn:active {
+	position:relative;
+	top:2px;
 }
