--- a/styles/carrito.css
+++ b/styles/carrito.css
@@ -59,15 +59,20 @@ body {
 
 .cajaCarrito {
     position: relative;
+    margin: 0px;
+    padding: 0px;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-bottom: 2%;
 }
 
 /* CARRITO */
 
 .nav_bar_carrito {
+    margin-left: 1%;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    width: 1%;
 }
 
 .card_carrito_total {
@@ -80,11 +85,10 @@ body {
 }
 
 .tituloCarrito{
-    margin-left: 10px;
+    margin-left: 0px;
 }
 
 .titulo_carrito_total {
-    position: static;
     display: inline-block;
     margin-left: 10px;
 }
@@ -108,62 +112,67 @@ body {
 }
 
 .cardCarrito {
+    margin-top: 1%;
     display: inline-flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     box-shadow: 5px 5px 15px rgba(3, 35, 77, 60%);
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
-    margin: 12px;
-    width: 250px;
-    height: 300px;
-    overflow: hidden;
+    width: 100%;
+    height: 100px;
 }
 
 .card_title{
-    text-align: center;
+    display: inline-block;
     font-size: 20px;
-    margin-top: 3%;  
+    margin-left: 100px;
+    width: 200px;
+    text-align: center;
 }
 
 .card_portada {
-    height: 55%;
-    width: 70%;
-    margin-left: 15%;
-    margin-top: 5%;
+    display: inline-block;
+    height: 90%;
+    width: 5%;
 }
 
 .card_price {
+    display: inline-block;
     font-size: 20px;
     text-align: center;
     font-family: 'Dosis', sans-serif;
     font-weight: bold;
 }
 
+.seccionCantidad{
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    margin-right: 100px;
+    width: 9%;
+    height: 40%;
+}
+
 .card_cantidad {
     font-family: 'Dosis', sans-serif;
 	box-shadow: 3px 5px 5px -7px #383838;
 	background-color:rgb(17, 4, 47);
-	border-radius:30px;
+	border-radius:50px;
     border-color: rgb(255, 197, 71);
 	color:#ffffff;
 	font-size:15px;
 	font-weight:bold;
-	padding: 8px 0px;
-    width: 15%;
+    width: 25%;
+    height: 100%;
     margin-top: 1%;  
-}
-
-.seccionCantidad{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .botonCantidad{
     background-color:rgb(231, 157, 38);
     color:#ffffff;
-    width: 13%;
-    height: 80%;
+    width: 17%;
+    height: 69%;
     border-radius:30px;
     margin-top: 1%;
     margin: 0px 10px;
