--- a/styles/carrito.css
+++ b/styles/carrito.css
@@ -1,6 +1,7 @@
 * {
     padding: 0px;
     margin: 0px;
+    text-decoration: none;
 }
 
 html {
@@ -19,16 +20,16 @@ body {
 .banner{
     z-index: 1;
     position: fixed;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-between;
     width: 100%;
     background-color: rgb(241, 118, 16);
     box-shadow: 5px 1px 5px black;
 }
 
 .tituloBanner{
-    margin: 10px;
+    margin-left: 1%;
     font-family: 'Dosis', sans-serif;
     font-weight: 600;
     font-size: 60px;
@@ -36,9 +37,11 @@ body {
 }
 
 .carrito_link{
-    display: flex;
-    align-items: center;
-    margin: 10px;
+    display: none;
+}
+
+.tienda_link{
+    margin-right: 1%;
 }
 
 .carritoFachero{
@@ -46,7 +49,7 @@ body {
 }
 
 .nav_texto_link{
-    color: black;
+    color: rgb(33, 8, 80)
 }
 
 /* CAJA CARRITO */
@@ -54,7 +57,7 @@ body {
     z-index: 0;
     position: relative;
     width: 100%;
-    top: 100px;
+    top: 90px;
 }
 
 .cajaCarrito {
@@ -71,17 +74,20 @@ body {
 .nav_bar_carrito {
     margin-left: 1%;
     display: inline-flex;
-    align-items: center;
+    align-items:center;
+    width: 100%;
     justify-content: center;
 }
 
 .card_carrito_total {
-    display: block;
+    display: inline-flex;
     box-shadow: 0px 5px 10px 0px rgba(117, 114, 155, 0.1);
     background-color: white;
     border-radius: 16px;
-    width: 150px;
-    height: 30px;
+    width: 10%;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
 }
 
 .tituloCarrito{
@@ -89,17 +95,20 @@ body {
 }
 
 .titulo_carrito_total {
-    display: inline-block;
-    margin-left: 10px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .total_carrito{
-    display: inline-block;
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 2%;
 }
 
 .tacho{
     width: 40px;
     height: 40px;
+    margin-top: 0%;
 }
 
 /* CARDS CARRITO*/
@@ -140,6 +149,7 @@ body {
 .card_price {
     display: inline-block;
     font-size: 20px;
+    width: 100px;
     text-align: center;
     font-family: 'Dosis', sans-serif;
     font-weight: bold;
@@ -185,4 +195,375 @@ body {
 .card_btn:active {
 	position:relative;
 	top:2px;
+}
+
+/* Celus */
+
+@media (max-width: 480px){
+
+    .tituloBanner{
+        margin-left: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 45px;
+        color: rgb(17, 4, 47);
+    }
+
+    .tienda_link{
+        display: inline-flex;
+        margin-right: 3%;
+    }
+
+    .carrito_link{
+        display: none;
+    }
+
+    .cardCarrito {
+        margin-top: 3%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 5px 5px 15px rgba(2, 25, 54, 0.315);
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        width: 100%;
+        height: 100px;
+    }
+    
+    .card_title{
+        display: inline-block;
+        font-size: 20px;
+        text-align: center;
+        width: 25%;
+        margin-left: 1%;
+    }
+    
+    .card_portada {
+        display: inline-block;
+        height: 80%;
+        width: 18%;
+    }
+    
+    .card_price {
+        display: inline-block;
+        font-size: 20px;
+        width: 100px;
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: bold;
+    }
+    
+    .seccionCantidad{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 1%;
+        width: 25%;
+        height: 40%;
+    }
+    
+    .card_cantidad {
+        font-family: 'Dosis', sans-serif;
+        box-shadow: 3px 5px 5px -7px #383838;
+        background-color:rgb(17, 4, 47);
+        border-radius:50px;
+        border-color: rgb(255, 197, 71);
+        color:#ffffff;
+        font-size:15px;
+        font-weight:bold;
+        width: 30%;
+        height: 100%;
+        margin-top: 1%;  
+    }
+    
+    .botonCantidad{
+        background-color:rgb(231, 157, 38);
+        color:#ffffff;
+        width: 20%;
+        height: 65%;
+        border-radius:30px;
+        margin-top: 1%;
+        margin: 0px 7px;
+    }
+
+    .card_carrito_total {
+        display: inline-flex;
+        box-shadow: 0px 5px 10px 0px rgba(117, 114, 155, 0.1);
+        background-color: white;
+        border-radius: 16px;
+        margin-top: 2%;
+        width: 40%;
+        height: 40px;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .tituloCarrito{
+        margin-left: 0px;
+    }
+    
+    .titulo_carrito_total {
+        font-size: 20px;
+        font-weight: 600;
+    }
+    
+    .total_carrito{
+        font-size: 20px;
+        font-weight: 600;
+        margin-left: 2%;
+    }
+
+    .tacho{
+        width: 40px;
+        height: 40px;
+        margin-top: 2%;
+    }
+}
+
+@media (max-width: 1280px){
+
+    .tituloBanner{
+        margin-left: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 45px;
+        color: rgb(17, 4, 47);
+    }
+
+    .tienda_link{
+        display: inline-flex;
+        margin-right: 3%;
+    }
+
+    .carrito_link{
+        display: none;
+    }
+
+    .contenedorTotal{
+        top: 70px;
+    }
+
+    .cardCarrito {
+        margin-top: 2%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 5px 5px 15px rgba(2, 25, 54, 0.315);
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        width: 100%;
+        height: 100px;
+    }
+    
+    .card_title{
+        display: inline-block;
+        font-size: 20px;
+        text-align: center;
+        width: 25%;
+        margin-left: 1%;
+    }
+    
+    .card_portada {
+        display: inline-block;
+        height: 80%;
+        width: 8%;
+    }
+    
+    .card_price {
+        display: inline-block;
+        font-size: 20px;
+        width: 100px;
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: bold;
+    }
+    
+    .seccionCantidad{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 10%;
+        width: 15%;
+        height: 40%;
+    }
+    
+    .card_cantidad {
+        font-family: 'Dosis', sans-serif;
+        box-shadow: 3px 5px 5px -7px #383838;
+        background-color:rgb(17, 4, 47);
+        border-radius:50px;
+        border-color: rgb(255, 197, 71);
+        color:#ffffff;
+        font-size:15px;
+        font-weight:bold;
+        width: 20%;
+        height: 100%;
+        margin-top: 1%;  
+    }
+    
+    .botonCantidad{
+        background-color:rgb(231, 157, 38);
+        color:#ffffff;
+        width: 13%;
+        height: 65%;
+        border-radius:30px;
+        margin-top: 1%;
+        margin: 0px 7px;
+    }
+
+    .card_carrito_total {
+        display: inline-flex;
+        box-shadow: 0px 5px 10px 0px rgba(117, 114, 155, 0.1);
+        background-color: white;
+        border-radius: 16px;
+        margin-top: 2%;
+        width: 15%;
+        height: 40px;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .tituloCarrito{
+        margin-left: 0px;
+    }
+    
+    .titulo_carrito_total {
+        font-size: 20px;
+        font-weight: 600;
+    }
+    
+    .total_carrito{
+        font-size: 20px;
+        font-weight: 600;
+        margin-left: 2%;
+    }
+
+    .tacho{
+        width: 40px;
+        height: 40px;
+        margin-top: 2%;
+    }
+}
+
+@media (max-width: 416px){
+
+    .tituloBanner{
+        margin-left: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 45px;
+        color: rgb(17, 4, 47);
+    }
+
+    .tienda_link{
+        font-size: 12px;
+        font-weight: 600;
+        display: inline-flex;
+        margin-right: 3%;
+    }
+
+    .carrito_link{
+        display: none;
+    }
+
+    .cardCarrito {
+        margin-top: 3%;
+        display: inline-flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 5px 5px 15px rgba(2, 25, 54, 0.315);
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        width: 100%;
+        height: 100px;
+    }
+    
+    .card_title{
+        display: inline-block;
+        font-size: 20px;
+        text-align: center;
+        width: 25%;
+        margin-left: 1%;
+    }
+    
+    .card_portada {
+        display: inline-block;
+        height: 80%;
+        width: 18%;
+    }
+    
+    .card_price {
+        display: inline-block;
+        font-size: 20px;
+        width: 100px;
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: bold;
+    }
+    
+    .seccionCantidad{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 1%;
+        width: 25%;
+        height: 40%;
+    }
+    
+    .card_cantidad {
+        font-family: 'Dosis', sans-serif;
+        box-shadow: 3px 5px 5px -7px #383838;
+        background-color:rgb(17, 4, 47);
+        border-radius:50px;
+        border-color: rgb(255, 197, 71);
+        color:#ffffff;
+        font-size:15px;
+        font-weight:bold;
+        width: 30%;
+        height: 100%;
+        margin-top: 1%;  
+    }
+    
+    .botonCantidad{
+        background-color:rgb(231, 157, 38);
+        color:#ffffff;
+        width: 20%;
+        height: 65%;
+        border-radius:30px;
+        margin-top: 1%;
+        margin: 0px 7px;
+    }
+
+    .card_carrito_total {
+        display: inline-flex;
+        box-shadow: 0px 5px 10px 0px rgba(117, 114, 155, 0.1);
+        background-color: white;
+        border-radius: 16px;
+        margin-top: 2%;
+        width: 40%;
+        height: 40px;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .tituloCarrito{
+        margin-left: 0px;
+    }
+    
+    .titulo_carrito_total {
+        font-size: 20px;
+        font-weight: 600;
+    }
+    
+    .total_carrito{
+        font-size: 20px;
+        font-weight: 600;
+        margin-left: 2%;
+    }
+
+    .tacho{
+        width: 40px;
+        height: 40px;
+        margin-top: 2%;
+    }
 }
