--- a/styles/index.css
+++ b/styles/index.css
@@ -19,28 +19,32 @@ body {
 /* BANNER */
 
 .banner{
+    z-index: 1;
     position: fixed;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-between;
     width: 100%;
-    height: 100px;
     background-color: rgb(241, 118, 16);
     box-shadow: 5px 1px 5px black;
 }
 
 .tituloBanner{
-    margin: 10px;
+    margin-left: 1%;
     font-family: 'Dosis', sans-serif;
     font-weight: 600;
     font-size: 60px;
-    color: rgb(17, 4, 47);;
+    color: rgb(17, 4, 47);
 }
 
 .carrito_link{
     display: flex;
     align-items: center;
     margin: 10px;
+}
+
+.tienda_link{
+    display: none;
 }
 
 .carritoFachero{
@@ -54,9 +58,13 @@ body {
 /* SECCION CAJA PRODUCTOS */
 
 .cajaPresupuesto{
-    padding: 100px;
+    position: relative;
+    z-index: 0;
+    width: 100%;
+    top: 75px;
     background-color: rgb(17, 4, 47);
     box-shadow: 5px 1px 5px rgb(146, 146, 146);
+    padding: 0px 100px;
 }
 
 .subtitulo{
@@ -66,6 +74,7 @@ body {
     font-weight: 600;
     font-size: 40px;
     letter-spacing: 5px;
+    padding-top: 1%;
 }
 
 .rainbow_text_animated {
@@ -215,4 +224,398 @@ body {
 
 .nombreApellido{
     display: inline-block;
+}
+
+@media (max-width: 480px){
+
+    .tituloBanner{
+        margin-left: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 45px;
+        color: rgb(17, 4, 47);
+    }
+
+    .tienda_link{
+        display: none;
+    }
+
+    .carrito_link{
+        display: inline-flex;
+        margin-right: 3%;
+    }
+
+    .cajaPresupuesto{
+        position: relative;
+        z-index: 0;
+        width: 100%;
+        top: 55px;
+        padding: 10px 60px;
+        background-color: rgb(17, 4, 47);
+        box-shadow: 5px 1px 5px rgb(146, 146, 146);
+    }
+
+    .subtitulo{
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 30px;
+        letter-spacing: 5px;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .card_productos{
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .card {
+        display: inline-flex;
+        flex-direction: column;
+        box-shadow: 5px 5px 15px rgba(3, 35, 77, 60%);
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        margin: 12px;
+        width: 150px;
+        height: 200px;
+        overflow: hidden;
+    }
+
+    .subtitulo_section{
+        text-align: left;
+        margin-left: 3%;
+        margin-bottom: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 25px;
+        color: rgb(241, 194, 41);
+    }
+
+    .card_title{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 6%;
+    }
+    
+    .card_portada {
+        height: 45%;
+        width: 60%;
+        margin-left: 20%;
+        margin-top: 1%;
+    }
+    
+    .card_price {
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: bold;
+    }
+    
+    .card_btn {
+        font-family: 'Dosis', sans-serif;
+        box-shadow: 0px 10px 6px -7px #000000;
+        background-color:rgb(17, 4, 47);;
+        border-radius:9px;
+        border-color: rgb(255, 197, 71);
+        color:#ffffff;
+        font-size:12px;
+        font-weight:bold;
+        padding: 8px 10px;
+        width: 75%;
+        margin-left: 12%;
+        margin-top: 1%;  
+    }
+}
+
+@media (max-width: 416px){
+
+    .tituloBanner{
+        margin-left: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 45px;
+        color: rgb(17, 4, 47);
+    }
+
+    .tienda_link{
+        display: none;
+    }
+
+    .carrito_link{
+        display: inline-flex;
+        margin-right: 3%;
+    }
+
+    .cajaPresupuesto{
+        position: relative;
+        z-index: 0;
+        width: 100%;
+        top: 55px;
+        padding: 10px 30px;
+        background-color: rgb(17, 4, 47);
+        box-shadow: 5px 1px 5px rgb(146, 146, 146);
+    }
+
+    .subtitulo{
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 30px;
+        letter-spacing: 5px;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .card_productos{
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .card {
+        display: inline-flex;
+        flex-direction: column;
+        box-shadow: 5px 5px 15px rgba(3, 35, 77, 60%);
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        margin: 12px;
+        width: 150px;
+        height: 200px;
+        overflow: hidden;
+    }
+
+    .subtitulo_section{
+        text-align: left;
+        margin-left: 3%;
+        margin-bottom: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 25px;
+        color: rgb(241, 194, 41);
+    }
+
+    .card_title{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 6%;
+    }
+    
+    .card_portada {
+        height: 45%;
+        width: 60%;
+        margin-left: 20%;
+        margin-top: 1%;
+    }
+    
+    .card_price {
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: bold;
+    }
+    
+    .card_btn {
+        font-family: 'Dosis', sans-serif;
+        box-shadow: 0px 10px 6px -7px #000000;
+        background-color:rgb(17, 4, 47);;
+        border-radius:9px;
+        border-color: rgb(255, 197, 71);
+        color:#ffffff;
+        font-size:12px;
+        font-weight:bold;
+        padding: 8px 10px;
+        width: 75%;
+        margin-left: 12%;
+        margin-top: 1%;  
+    }
+}
+
+@media (max-width: 393px){
+
+    .tituloBanner{
+        margin-left: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 40px;
+        color: rgb(17, 4, 47);
+    }
+
+    .tienda_link{
+        display: none;
+    }
+
+    .carrito_link{
+        display: inline-flex;
+        margin-right: 3%;
+    }
+
+    .cajaPresupuesto{
+        position: relative;
+        z-index: 0;
+        width: 100%;
+        top: 50px;
+        padding: 10px 19px;
+        background-color: rgb(17, 4, 47);
+        box-shadow: 5px 1px 5px rgb(146, 146, 146);
+    }
+
+    .subtitulo{
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 30px;
+        letter-spacing: 5px;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .card_productos{
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .card {
+        display: inline-flex;
+        flex-direction: column;
+        box-shadow: 5px 5px 15px rgba(3, 35, 77, 60%);
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        margin: 12px;
+        width: 150px;
+        height: 200px;
+        overflow: hidden;
+    }
+
+    .subtitulo_section{
+        text-align: left;
+        margin-left: 3%;
+        margin-bottom: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 25px;
+        color: rgb(241, 194, 41);
+    }
+
+    .card_title{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 6%;
+    }
+    
+    .card_portada {
+        height: 45%;
+        width: 60%;
+        margin-left: 20%;
+        margin-top: 1%;
+    }
+    
+    .card_price {
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: bold;
+    }
+    
+    .card_btn {
+        font-family: 'Dosis', sans-serif;
+        box-shadow: 0px 10px 6px -7px #000000;
+        background-color:rgb(17, 4, 47);;
+        border-radius:9px;
+        border-color: rgb(255, 197, 71);
+        color:#ffffff;
+        font-size:12px;
+        font-weight:bold;
+        padding: 8px 10px;
+        width: 75%;
+        margin-left: 12%;
+        margin-top: 1%;  
+    }
+}
+
+@media (max-width: 280px){
+
+    .tituloBanner{
+        margin-left: 1%;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 30px;
+        color: rgb(17, 4, 47);
+    }
+
+    .tienda_link{
+        display: none;
+    }
+
+    .carrito_link{
+        display: inline-flex;
+        margin-right: 3%;
+        font-size: 15px;
+    }
+
+    .cajaPresupuesto{
+        position: relative;
+        z-index: 0;
+        width: 100%;
+        top: 44px;
+        padding: 10px 14px;
+        background-color: rgb(17, 4, 47);
+        box-shadow: 5px 1px 5px rgb(146, 146, 146);
+    }
+
+    .subtitulo{
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        letter-spacing: 5px;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    
+    .card {
+        display: inline-flex;
+        flex-direction: column;
+        box-shadow: 5px 5px 15px rgba(3, 35, 77, 60%);
+        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        margin: 12px;
+        width: 100px;
+        height: 150px;
+        overflow: hidden;
+    }
+
+    .card_title{
+        text-align: center;
+        font-size: 16px;
+        margin-top: 6%;
+    }
+    
+    .card_portada {
+        height: 40%;
+        width: 60%;
+        margin-left: 20%;
+        margin-top: 1%;
+    }
+    
+    .card_price {
+        font-size: 16px;
+        text-align: center;
+        font-family: 'Dosis', sans-serif;
+        font-weight: bold;
+    }
+    
+    .card_btn {
+        font-family: 'Dosis', sans-serif;
+        box-shadow: 0px 10px 6px -7px #000000;
+        background-color:rgb(17, 4, 47);;
+        border-radius:9px;
+        border-color: rgb(255, 197, 71);
+        color:#ffffff;
+        font-size:9px;
+        font-weight:bold;
+        padding: 8px 10px;
+        width: 88%;
+        margin-left: 5%;
+        margin-top: 1%;  
+    }
 }
