--- a/styles/carrito.css
+++ b/styles/carrito.css
@@ -197,129 +197,27 @@ body {
 	top:2px;
 }
 
-/* Celus */
-
-@media (max-width: 480px){
-
-    .tituloBanner{
-        margin-left: 1%;
-        font-family: 'Dosis', sans-serif;
-        font-weight: 600;
-        font-size: 45px;
-        color: rgb(17, 4, 47);
-    }
-
-    .tienda_link{
-        display: inline-flex;
-        margin-right: 3%;
-    }
-
-    .carrito_link{
-        display: none;
-    }
-
-    .cardCarrito {
-        margin-top: 3%;
-        display: inline-flex;
-        align-items: center;
-        justify-content: space-between;
-        box-shadow: 5px 5px 15px rgba(2, 25, 54, 0.315);
-        background-color: rgb(255, 255, 255);
-        border-radius: 20px;
-        width: 100%;
-        height: 100px;
-    }
-    
-    .card_title{
-        display: inline-block;
-        font-size: 20px;
-        text-align: center;
-        width: 25%;
-        margin-left: 1%;
-    }
-    
-    .card_portada {
-        display: inline-block;
-        height: 80%;
-        width: 18%;
-    }
-    
-    .card_price {
-        display: inline-block;
-        font-size: 20px;
-        width: 100px;
-        text-align: center;
-        font-family: 'Dosis', sans-serif;
-        font-weight: bold;
-    }
-    
-    .seccionCantidad{
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 1%;
-        width: 25%;
-        height: 40%;
-    }
-    
-    .card_cantidad {
-        font-family: 'Dosis', sans-serif;
-        box-shadow: 3px 5px 5px -7px #383838;
-        background-color:rgb(17, 4, 47);
-        border-radius:50px;
-        border-color: rgb(255, 197, 71);
-        color:#ffffff;
-        font-size:15px;
-        font-weight:bold;
-        width: 30%;
-        height: 100%;
-        margin-top: 1%;  
-    }
-    
-    .botonCantidad{
-        background-color:rgb(231, 157, 38);
-        color:#ffffff;
-        width: 20%;
-        height: 65%;
-        border-radius:30px;
-        margin-top: 1%;
-        margin: 0px 7px;
-    }
-
-    .card_carrito_total {
-        display: inline-flex;
-        box-shadow: 0px 5px 10px 0px rgba(117, 114, 155, 0.1);
-        background-color: white;
-        border-radius: 16px;
-        margin-top: 2%;
-        width: 40%;
-        height: 40px;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .tituloCarrito{
-        margin-left: 0px;
-    }
-    
-    .titulo_carrito_total {
-        font-size: 20px;
-        font-weight: 600;
-    }
-    
-    .total_carrito{
-        font-size: 20px;
-        font-weight: 600;
-        margin-left: 2%;
-    }
-
-    .tacho{
-        width: 40px;
-        height: 40px;
-        margin-top: 2%;
-    }
+.seccionConfirmar {
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-content: center;
+    margin-top: 1%;
 }
 
+.finalizarCompra {
+    width: 8%;
+    height: 40px;
+    background-color: rgb(241, 118, 16);
+    color: white;
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+/* RESPONSIVE */
+
+/* --------------------------------------------------------------------------------------------- */
 @media (max-width: 1280px){
 
     .tituloBanner{
@@ -443,7 +341,27 @@ body {
         height: 40px;
         margin-top: 2%;
     }
+
+    .seccionConfirmar {
+        width: 100%;
+        display: inline-flex;
+        justify-content: center;
+        align-content: center;
+        margin-top: 1%;
+    }
+    
+    .finalizarCompra {
+        width: 12%;
+        height: 40px;
+        background-color: rgb(241, 118, 16);
+        color: white;
+        border-radius: 20px;
+        font-size: 16px;
+        font-weight: 600;
+    }
 }
+
+/* --------------------------------------------------------------------------------------------- */
 
 @media (max-width: 416px){
 
@@ -565,5 +483,23 @@ body {
         width: 40px;
         height: 40px;
         margin-top: 2%;
+    }
+
+    .seccionConfirmar {
+        width: 100%;
+        display: inline-flex;
+        justify-content: center;
+        align-content: center;
+        margin-top: 2%;
+    }
+    
+    .finalizarCompra {
+        width: 35%;
+        height: 40px;
+        background-color: rgb(241, 118, 16);
+        color: white;
+        border-radius: 20px;
+        font-size: 16px;
+        font-weight: 600;
     }
 }
